[package]
name = "lcdocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
walkdir = "2.5.0"

[dev-dependencies]
assert_unordered = "0.3.5"
lazy_static = "1.4.0"



[[example]]
name = "two_sum"
path = "./examples/easy/two_sum.rs"


[[example]]
name = "contains_duplicate"
path = "./examples/easy/contains_duplicate.rs"


[[example]]
name = "valid_anagram"
path = "./examples/easy/valid_anagram.rs"


[[example]]
name = "valid_parentheses"
path = "./examples/easy/valid_parentheses.rs"


[[example]]
name = "group_anagrams"
path = "./examples/medium/group_anagrams.rs"


[[example]]
name = "top_k_frequent_elements"
path = "./examples/medium/top_k_frequent_elements.rs"
